# kail_location

./: .gitignore  AGENTS.md  README.md  README_EN.md
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: adi-registration.properties  gait_config.txt  xposed_init
app/src/main/cpp/: CMakeLists.txt  config.cpp  config.h  gait_jni.cpp  simulate.cpp  simulate.h
app/src/main/cpp/native_hook/: hook.cpp  sensor_simulator.cpp  sensor_simulator.h
app/src/main/java/com/kail/location/ads/: NativeAdLoader.kt  NativeAdView.kt
app/src/main/java/com/kail/location/models/: RouteModels.kt
app/src/main/java/com/kail/location/nmea/: NMEA.kt  NmeaValue.kt
app/src/main/java/com/kail/location/service/: ServiceGo.kt  ServiceGoNoroot.kt  ServiceGoRoot.kt
app/src/main/java/com/kail/location/utils/: AppOpenAdManager.kt  GaitSimulator.kt  GoApplication.kt  GoUtils.kt
app/src/main/java/com/kail/location/viewmodels/: HistoryViewModel.kt  JoystickViewModel.kt  LocationPickerViewModel.kt  LocationSimulationViewModel.kt  NavigationSimulationViewModel.kt  RouteSimulationViewModel.kt  SettingsViewModel.kt  WelcomeViewModel.kt
app/src/main/res/layout/: native_ad_layout.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: arrays.xml  strings.xml
app/src/main/res/values-ja/: arrays.xml  strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rTW/: arrays.xml  strings.xml
(+50 files in other folders)
